[package]
name = "binomtest-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
arbitrary = { version = "1", features = ["derive"] }
binomtest = { path = "..", features = ["arbitrary"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "diff_fuzz"
path = "fuzz_targets/diff_fuzz.rs"
test = false
doc = false
bench = false
